First Production Release

--- a/header.html
+++ b/header.html
@@ -40,6 +40,10 @@
       <img src="/images/icons/modeling.svg"/>
       <span>Simulation</span>
     </a>
+    <a class="nav-item" href="#human-resources.html">
+      <img src="/images/icons/human-resources.svg"/>
+      <span>Human Resources</span>
+    </a>
     <a class="nav-item" href="#meet-the-team.html">
       <img src="/images/icons/team.svg"/>
       <span>Meet The Team</span>
