--- a/manufacturing-processes.html
+++ b/manufacturing-processes.html
@@ -380,6 +380,14 @@
         </text>
         <img class="ball" src="/images/manufacturing/printer.png"/>
     </section>
+
+    <div class="author">
+        <img src="/images/meet-the-team/bio-kristen-cropped.png"/>
+        <text>
+            <h3>Kristen Pickering</h3>
+            <h4>Manufacturing Processes Liaison</h4>
+        </text>
+    </div>
     
 </div>
 
