--- a/marketing.html
+++ b/marketing.html
@@ -22,6 +22,15 @@
         </text>
         <img src="/images/marketing/marketing-solution-strategy.png"/>
     </section>
+
+    <div class="author">
+        <img src="/images/meet-the-team/bio-lydia-cropped.png"/>
+        <text>
+            <h3>Lydia Glover</h3>
+            <h4>Marketing Analyst</h4>
+        </text>
+    </div>
+
 </div>
 
 <!-- Floating Background -->
