--- a/materials-handling.html
+++ b/materials-handling.html
@@ -6,6 +6,15 @@
             <p>All our raw materials will be shipped to us on a 48” x 40” pallets. All finished goods will be stored on 42” x 42” pallets. Our finished good storage area will have 18 pallet racks measuring 96” x 48” x 96”. The finished good storage area will be 3,128 ft2. The raw material storage area will be 3,116 ft2 with 12 pallet racks measuring                               108” x 48” x 96”. In terms of equipment, we will use 4 forklifts, 2 WIP storage Bins, one pallet truck, and one stretch wrap machine. In terms of personnel, we will have 4 forklift drivers and one material handler. The annual expenses and capital cost will be $116,862 and $101,198.32, respectively. </p>
         </text>
     </section>
+
+    <div class="author">
+        <img src="/images/meet-the-team/bio-jacob-cropped.png"/>
+        <text>
+            <h3>Jacob Gieger</h3>
+            <h4>Material Handling Analyst</h4>
+        </text>
+    </div>
+
 </div>
 
 <!-- Floating Background -->
