--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -1,1 +1,54 @@
-Meet The Team
+<div class="template-wrapper">
+    <section>
+        <text class="valign">
+            <h1>Adam Nguyen</h1>
+            <p>Adam Nguyen is the site-selection analyst and financials analyst for the venture analysis project. He is a senior in Industrial Engineering at Mississippi State University. During college, he worked as a Bicycle Mechanic and Salesman at Boardtown Bikes in Starkville, MS. Adam is an avid cyclist and bicycle enthusiast who enjoys riding mountain bike trails the most. His bicycle industry experience and expertise served as an invaluable asset to the project. In his free time, Adam enjoys playing the French Horn and spending time with his family. After graduation, Adam plans to go on a cycle tour through South America; before entering the workforce to pursue jobs in management, manufacturing, and systems engineering.</p>
+        </text>
+        <img class="ball2" src="/images/meet-the-team/bio-adam-cropped.png"/>
+    </section>
+    <section class="reverse">
+        <text class="valign">
+            <h1>Tanner Wesson Boyd</h1>
+            <p>Tanner Wesson Boyd is the project manager and logistics analyst for the venture analysis project. He is a senior at Mississippi State University majoring in Industrial Engineering.  He has worked at Wade Inc. as an assistant parts manager throughout his college career. Wade Inc. is a group of 13 John Deere dealerships across North Mississippi.  In his free time, Tanner enjoys watching tv, spending time with friends, and hunting.  After graduation, Tanner plans to go on and get a master's degree before he goes to work full-time.</p>
+        </text>
+        <img class="ball2" src="/images/meet-the-team/bio-tanner-cropped.png"/>
+    </section>
+    <section class="">
+        <text class="valign">
+            <h1>Lydia Glover</h1>
+            <p>Lydia Glover is the Marketing and Quality analyst for the venture analysis project. She is a senior in Industrial Engineering at Mississippi State University. During college she co-oped at Southwire, a wire manufacturer in the southeast, and interned at Tillamook County Creamery Association, a dairy manufacturer in Oregon. Lydia enjoys reading, camping, cooking, volunteering with kids, and hanging out with family and friends. After graduation she will be working as a kitchen assistant at a dude ranch in Wyoming.</p>
+        </text>
+        <img class="ball2" src="/images/meet-the-team/bio-lydia-cropped.png"/>
+    </section>
+    <section class="reverse">
+        <text class="valign">
+            <h1>Kevin Chance</h1>
+            <p>Kevin Chance is an industrial engineering senior at Mississippi State University (MSU) and is the green and methods analyst for the venture analysis project. Kevin enjoys outdoor activities, camping, hunting, disc golf, and playing in the yard or at the playground with his wife and kids. He also enjoys cycling and hopes to pick it up again soon. Kevin has fourteen years of experience in industrial manufacturing maintenance and a few years of management experience at Odom Industrie Inc. He has also spent one year working in the oilfield for Halliburton Company in the frac division. While attending MSU, he co-oped a total of six semesters. Three semesters were with Southwire Company as an industrial engineer. The other three Semesters were with Parker Hannifin in Holy Spring MS as a process engineer. Kevin’s future includes, continuing to place his faith first in all things, settling down with his growing family of four, and building their dream home, all while watching their kids grow. Aside from Kevin’s faith, family is the most important thing in his life. He hopes to gain employment with a company that shares that same value and treats the employees as their own work family. Kevin’s desire for cycling, work experience, and owning a balance bike not only made manufacturing a balance bike fun, but they also made manufacturing a balance bike relevant.</p>
+        </text>
+        <img class="ball2" src="/images/meet-the-team/bio-kevin-cropped.png"/>
+    </section>
+    <section class="">
+        <text class="valign">
+            <h1>Kristen Pickering</h1>
+            <p>Kristen Pickering is the human resources analyst and the MP liaison. Kristen enjoys outdoor activities, running, and cycling in her free time. She values her family, friends, and faith. She has been a co-op for 4 semesters at Mercedes Benz in Vance, AL, where she was a part of the Global Service Parts team. She is a senior majoring in Industrial Engineering and will be graduating in May. Her future plans include starting a full-time position with PepsiCo as a Sales Management Associate this summer. Her passion for cycling and outdoor activities has allowed her to connect with the manufacturing of the balance bike product. She believes it is a wonderful way for children to get outside and be active.</p>
+        </text>
+        <img class="ball2" src="/images/meet-the-team/bio-kristen-cropped.png"/>
+    </section>
+    <section class="reverse">
+        <text class="valign">
+            <h1>Jacob Cameron Gieger</h1>
+            <p>Jacob Cameron Gieger is the Material Handling analyst and Layout analyst. He is a senior in Industrial Engineering at Mississippi State University. During college, he worked as an Industrial/Manufacturing Engineering Intern at ACCO Brands in Booneville, MS. ACCO Brands is a worldwide producer of office products including GBC, Mead, Quartet, and Five Star. Jacob enjoys watching sports, hunting, playing video games, and learning about military history. After graduation, Jacob will be entering the workforce to pursue jobs in ergonomics, manufacturing, and systems engineering. </p>
+        </text>
+        <img class="ball2" src="/images/meet-the-team/bio-jacob-cropped.png"/>
+    </section>
+    <section class="">
+        <text class="valign">
+            <h1>Neil Eno</h1>
+            <p>Neil Eno is the firm's Simulations and Product Analyst. Neil is in his senior year of college and plans on going back home in Huntsville, AL to try and land a job at Polaris, Dynetics, or Northrop Grumman. His passions are sports, hanging out with friends, and card games. He tries to help with anything and everything whether it's; being the treasurer for the Engineering Student Council, being on the Action Team for Project Enspire, or making time to go help out at the Habitat for Humanity’s resale store. Neil’s future goal is to set up a STEM program in his hometown to teach kids what engineering is.</p>
+        </text>
+        <img class="ball2" src="/images/meet-the-team/bio-neil-cropped.png"/>
+    </section>
+</div>
+
+<!-- Floating Background -->
+<img class="floating-bg" src="/images/matrix-shit.jpg" />
