--- a/product-analysis.html
+++ b/product-analysis.html
@@ -71,7 +71,15 @@
         </text>
         <img src="/images/product-analysis/dmlc-final-assembly.png"/>
     </section>
+
+    <div class="author">
+        <img src="/images/meet-the-team/bio-neil-cropped.png"/>
+        <text>
+            <h3>Neil Eno</h3>
+            <h4>Product Analyst</h4>
+        </text>
+    </div>
 </div>
 
 <!-- Floating Background -->
-<img class="floating-bg" src="/images/marketing/market-clipart-black.jpg" />
+<img class="floating-bg" src="/images/project-overview/bike-shcematic.jpg" />
