--- a/project-overview.html
+++ b/project-overview.html
@@ -1,5 +1,5 @@
 <div class="template-wrapper">
-    <section>
+    <section class="full-span">
         <text class="valign">
             <h1>Project Overview</h1>
             <p>Marathon Investments hired Tour De Four Consulting to conduct a five-year venture analysis on the profitability and feasibility of manufacturing balance bicycles. Analyses were performed throughout the project on the facility’s site selection, the balance bike market, methods for manufacturing, plant layout, logistics, quality operations, facility simulation models, human resources, and the overall financial feasibility of the venture.</p>
@@ -19,8 +19,17 @@
             <h1>Profitability</h1>
             <p>To make this venture profitable, a major reduction in employee salaries, material cost, and fabrication expenses is required to turn a profit. A sensitivity analysis revealed that a 50% reduction in employee salaries, material costs, and fabrication expenses would yield a profit with a 13% rate of return after asset disposal. With the reduction, years 2-5 all yield a profit after taxes. The net cash flow after asset disposal in year five would be $8,624,830. However, a complete overhaul of the current system would be required to achieve this cost reduction.</p>
         </text>
-        <img src="/images/project-overview/cash-mountain.png"/>
+        <img class="smaller" src="/images/project-overview/financial-analystics.svg"/>
     </section>
+
+    <div class="author">
+        <img src="/images/meet-the-team/bio-adam-cropped.png"/>
+        <text>
+            <h3>Adam Nguyen</h3>
+            <h4>Financial Analyst</h4>
+        </text>
+    </div>
+
 </div>
 
 <!-- Floating Background -->
