--- a/quality.html
+++ b/quality.html
@@ -5,6 +5,15 @@
             <p>High quality raw materials and production processes are essential to the quality of the final product. Tour de Four Consulting recommends not creating a dedicated quality department nor relying on inspection to create a high-quality product. Instead TDFC suggests creating a culture where quality is everyone’s job and choosing suppliers with high internal quality standards. While specific quality activities will be assigned to personnel, it is vital to create a culture where every employee is empowered to continuously improve the production process. Routine quality measures will be carried out by various personnel including operators, group leaders, material handlers, and customer service representatives. Special quality measures such as Six Sigma projects and 5S blitzes will be led by the project manager.</p>
         </text>
     </section>
+
+    <div class="author">
+        <img src="/images/meet-the-team/bio-lydia-cropped.png"/>
+        <text>
+            <h3>Lydia Glover</h3>
+            <h4>Quality Analyst</h4>
+        </text>
+    </div>
+
 </div>
 
 <!-- Floating Background -->
