--- a/simulation.html
+++ b/simulation.html
@@ -70,6 +70,14 @@
             <p>From the production of the layouts it shows that Tour De Four should go with production line layout. The demand per shift is 930 bikes per day, production line layout meets the demand while process layout could not meet the requirement.</p>
         </text>
     </section>
+
+    <div class="author">
+        <img src="/images/meet-the-team/bio-neil-cropped.png"/>
+        <text>
+            <h3>Neil Eno</h3>
+            <h4>Simulations Analyst</h4>
+        </text>
+    </div>
 </div>
 
 <!-- Floating Background -->
