--- a/site-selection.html
+++ b/site-selection.html
@@ -14,8 +14,16 @@
         <img src="/images/site-selection/selection-map.png"/>
     </section>
 
+    <div class="author">
+        <img src="/images/meet-the-team/bio-adam-cropped.png"/>
+        <text>
+            <h3>Adam Nguyen</h3>
+            <h4>Site Selection Analyst</h4>
+        </text>
+    </div>
+
 </div>
 
 <!-- Floating Background -->
-<img class="floating-bg" src="/images/site-selection/city-streets.jpeg" />
+<img class="floating-bg" src="/images/site-selection/factory-site.jpg" />
 
