--- a/header.html
+++ b/header.html
@@ -1,4 +1,4 @@
-<div class="sticky-nav-container" id="sticky-nav-container" onclick="toggleNav('sticky-nav-container')">
+<div class="sticky-nav-container" id="sticky-nav-container" onclick="toggleDiv('sticky-nav-container')">
   <div class="sticky-nav">
     <a class="nav-item hamburger" href="" >
       <img src="/images/icons/hamburger-menu.svg"/>
