--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header ng-include="'/header.html'"> </header>
 
     <!-- Page Content -->
-    <main ng-include="viewSrc" onclick="closeNav('sticky-nav-container')"> </main>
+    <main ng-include="viewSrc" onclick="closeDiv('sticky-nav-container');"> </main>
 
     <!-- Footer -->
     <footer></footer>
