--- a/layout.html
+++ b/layout.html
@@ -6,7 +6,7 @@
         </text>
     </section>
 
-    <div class="author">
+    <div class="author" id="author" onclick="toggleDiv('author')">
         <img src="/images/meet-the-team/bio-jacob-cropped.png"/>
         <text>
             <h3>Jacob Gieger</h3>
