--- a/lean-and-logistics.html
+++ b/lean-and-logistics.html
@@ -586,7 +586,7 @@
         </text>
     </section>
 
-    <div class="author">
+    <div class="author" id="author" onclick="toggleDiv('author')">
         <img src="/images/meet-the-team/bio-tanner-cropped.png"/>
         <text>
             <h3>Tanner Boyd</h3>
