--- a/marketing.html
+++ b/marketing.html
@@ -23,7 +23,7 @@
         <img src="/images/marketing/marketing-solution-strategy.png"/>
     </section>
 
-    <div class="author">
+    <div class="author" id="author" onclick="toggleDiv('author')">
         <img src="/images/meet-the-team/bio-lydia-cropped.png"/>
         <text>
             <h3>Lydia Glover</h3>
