--- a/methods.html
+++ b/methods.html
@@ -830,7 +830,7 @@
         </text>
     </section>
 
-    <div class="author">
+    <div class="author" id="author" onclick="toggleDiv('author')">
         <img src="/images/meet-the-team/bio-kevin-cropped.png"/>
         <text>
             <h3>Kevin Chance</h3>
