--- a/product-analysis.html
+++ b/product-analysis.html
@@ -72,7 +72,7 @@
         <img src="/images/product-analysis/dmlc-final-assembly.png"/>
     </section>
 
-    <div class="author">
+    <div class="author" id="author" onclick="toggleDiv('author')">
         <img src="/images/meet-the-team/bio-neil-cropped.png"/>
         <text>
             <h3>Neil Eno</h3>
