--- a/project-overview.html
+++ b/project-overview.html
@@ -22,7 +22,7 @@
         <img class="smaller" src="/images/project-overview/financial-analystics.svg"/>
     </section>
 
-    <div class="author">
+    <div class="author" id="author" onclick="toggleDiv('author')">
         <img src="/images/meet-the-team/bio-adam-cropped.png"/>
         <text>
             <h3>Adam Nguyen</h3>
