--- a/simulation.html
+++ b/simulation.html
@@ -71,7 +71,7 @@
         </text>
     </section>
 
-    <div class="author">
+    <div class="author" id="author" onclick="toggleDiv('author')">
         <img src="/images/meet-the-team/bio-neil-cropped.png"/>
         <text>
             <h3>Neil Eno</h3>
