--- a/site-selection.html
+++ b/site-selection.html
@@ -14,7 +14,7 @@
         <img src="/images/site-selection/selection-map.png"/>
     </section>
 
-    <div class="author">
+    <div class="author" id="author" onclick="toggleDiv('author')">
         <img src="/images/meet-the-team/bio-adam-cropped.png"/>
         <text>
             <h3>Adam Nguyen</h3>
