--- a/human-resources.html
+++ b/human-resources.html
@@ -558,7 +558,7 @@
         </text>
     </section>
 
-    <div class="author">
+    <div class="author" id="author" onclick="toggleDiv('author')">
         <img src="/images/meet-the-team/bio-kristen-cropped.png"/>
         <text>
             <h3>Kristen Pickering</h3>
