--- a/manufacturing-processes.html
+++ b/manufacturing-processes.html
@@ -381,7 +381,7 @@
         <img class="ball" src="/images/manufacturing/printer.png"/>
     </section>
 
-    <div class="author">
+    <div class="author" id="author" onclick="toggleDiv('author')">
         <img src="/images/meet-the-team/bio-kristen-cropped.png"/>
         <text>
             <h3>Kristen Pickering</h3>
