--- a/quality.html
+++ b/quality.html
@@ -6,7 +6,7 @@
         </text>
     </section>
 
-    <div class="author">
+    <div class="author" id="author" onclick="toggleDiv('author')">
         <img src="/images/meet-the-team/bio-lydia-cropped.png"/>
         <text>
             <h3>Lydia Glover</h3>
