--- a/materials-handling.html
+++ b/materials-handling.html
@@ -1,10 +1,24 @@
 <div class="template-wrapper">
-    <section>
+
+    <section class="short">
         <text class="valign alone">
             <h1>Material Handling</h1>
+        </text>
+    </section>
+    <section>
+        <text class="valign">
+            <h2>Material Flow</h2>
             <p>Proper material flow is one of our highest priorities at Tour De Four Consulting. All raw materials will come in through our receiving dock and be stored in our raw material storage area. From there, it will flow to fabrication and then assembly. The material will be moved from our fabrication area to our assembly area via our WIP storage bin, which will be moved by a pallet truck. After assembly, our pallets will be wrapped by a stretch wrapper and moved to the finished good storage to await shipping.    </p>
+        </text>
+        <img class="ball2" src="/images/material-handling/pallate-stacking.png" />
+    </section>
+
+    <section class="reverse">
+        <text>
+            <h2>Pallate Dimensions</h2>
             <p>All our raw materials will be shipped to us on a 48” x 40” pallets. All finished goods will be stored on 42” x 42” pallets. Our finished good storage area will have 18 pallet racks measuring 96” x 48” x 96”. The finished good storage area will be 3,128 ft2. The raw material storage area will be 3,116 ft2 with 12 pallet racks measuring                               108” x 48” x 96”. In terms of equipment, we will use 4 forklifts, 2 WIP storage Bins, one pallet truck, and one stretch wrap machine. In terms of personnel, we will have 4 forklift drivers and one material handler. The annual expenses and capital cost will be $116,862 and $101,198.32, respectively. </p>
         </text>
+        <img src="/images/material-handling/pallate-dimensions.jpg" />
     </section>
 
     <div class="author" id="author" onclick="toggleDiv('author')">
