--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -8,8 +8,8 @@
     </section>
     <section class="reverse">
         <text class="valign">
-            <h1>Tanner Wesson Boyd</h1>
-            <p>Tanner Wesson Boyd is the project manager and logistics analyst for the venture analysis project. He is a senior at Mississippi State University majoring in Industrial Engineering.  He has worked at Wade Inc. as an assistant parts manager throughout his college career. Wade Inc. is a group of 13 John Deere dealerships across North Mississippi.  In his free time, Tanner enjoys watching tv, spending time with friends, and hunting.  After graduation, Tanner plans to go on and get a master's degree before he goes to work full-time.</p>
+            <h1>Tanner Boyd</h1>
+            <p>Tanner Boyd is the project manager and logistics analyst for the venture analysis project. He is a senior at Mississippi State University majoring in Industrial Engineering.  He has worked at Wade Inc. as an assistant parts manager throughout his college career. Wade Inc. is a group of 13 John Deere dealerships across North Mississippi.  In his free time, Tanner enjoys watching tv, spending time with friends, and hunting.  After graduation, Tanner plans to go on and get a master's degree before he goes to work full-time.</p>
         </text>
         <img class="ball2" src="/images/meet-the-team/bio-tanner-cropped.png"/>
     </section>
@@ -36,7 +36,7 @@
     </section>
     <section class="reverse">
         <text class="valign">
-            <h1>Jacob Cameron Gieger</h1>
+            <h1>Jacob Gieger</h1>
             <p>Jacob Cameron Gieger is the Material Handling analyst and Layout analyst. He is a senior in Industrial Engineering at Mississippi State University. During college, he worked as an Industrial/Manufacturing Engineering Intern at ACCO Brands in Booneville, MS. ACCO Brands is a worldwide producer of office products including GBC, Mead, Quartet, and Five Star. Jacob enjoys watching sports, hunting, playing video games, and learning about military history. After graduation, Jacob will be entering the workforce to pursue jobs in ergonomics, manufacturing, and systems engineering. </p>
         </text>
         <img class="ball2" src="/images/meet-the-team/bio-jacob-cropped.png"/>
