Updated MP table

--- a/manufacturing-processes.html
+++ b/manufacturing-processes.html
@@ -41,97 +41,97 @@
                 <tr>
                     <td>33</td>
                     <td>Footrest Washer</td>
-                    <td> here </td>
+                    <td> Buy </td>
                 </tr>
                 <tr> <!---->
                     <td>34</td>
                     <td>Footrest Rivet</td>
-                    <td> here </td>
+                    <td> Buy </td>
                 </tr>
                 <tr>
                     <td>35</td>
                     <td>Flat Wrench</td>
-                    <td> here </td>
+                    <td> Buy </td>
                 </tr>
                 <tr>
                     <td>36</td>
                     <td>Allen Wrench</td>
-                    <td> here </td>
+                    <td> Buy </td>
                 </tr>
                 <tr>
                     <td>47</td>
                     <td>Race</td>
-                    <td> here </td>
+                    <td> Buy </td>
                 </tr>
                 <tr>
                     <td>28</td>
                     <td>Extra Extended Seat Post</td>
-                    <td> here </td>
+                    <td> Make </td>
                 </tr>
                 <tr>
                     <td>29</td>
                     <td>Extended Seat Post</td>
-                    <td> here </td>
+                    <td> Make </td>
                 </tr>
                 <tr>
                     <td>31</td>
                     <td>Instructions</td>
-                    <td> here </td>
+                    <td> Make </td>
                 </tr>
                 <tr>
                     <td>32</td>
                     <td>Footrest</td>
-                    <td> here </td>
+                    <td> Make </td>
                 </tr>
                 <tr>
                     <td>37</td>
                     <td>Back Wheel Stay</td>
-                    <td> here </td>
+                    <td> Make </td>
                 </tr>
                 <tr>
                     <td>38</td>
                     <td>Fork Arm </td>
-                    <td> here </td>
+                    <td> Make </td>
                 </tr>
                 <tr>
                     <td>45</td>
                     <td>Handlebars</td>
-                    <td> here </td>
+                    <td> Make </td>
                 </tr>
                 <tr>
                     <td>46</td>
                     <td>Handlebar Neck</td>
-                    <td> here </td>
+                    <td> Make </td>
                 </tr>
                 <tr>
                     <td>48</td>
                     <td>Headtube Sleeves</td>
-                    <td> here </td>
+                    <td> Make </td>
                 </tr>
                 <tr>
                     <td>49</td>
                     <td>Steer Tube</td>
-                    <td> here </td>
+                    <td> Make </td>
                 </tr>
                 <tr>
                     <td>50</td>
                     <td>Fork Arm Combiner</td>
-                    <td> here </td>
+                    <td> Make </td>
                 </tr>
                 <tr>
                     <td>52A</td>
                     <td>Tube on End of Frame</td>
-                    <td> here </td>
+                    <td> Make </td>
                 </tr>
                 <tr>
                     <td>52B</td>
                     <td>Main Frame</td>
-                    <td> here </td>
+                    <td> Make </td>
                 </tr>
                 <tr>
                     <td>52B</td>
                     <td>Tube through Frame </td>
-                    <td> here </td>
+                    <td> Make </td>
                 </tr>
             </table>
 
